# django-postgres-stats

./: .gitignore  LICENSE  Makefile  README.rst  dev_requirements.txt  requirements.txt  setup.cfg  setup.py  todo.txt
docs/: Makefile  conf.py  functions.rst  index.rst  installation.rst  roadmap.rst
postgres_power/: aggregates.py  functions.py
postgres_stats/: aggregates.py  functions.py
tests/: models.py  settings.py  test_aggregates.py  test_functions.py
