[metadata]
name = django-postgres-power
author = Clinton Dreisbach
author-email = cdreisbach@rti.org
summary = A Django app to expose more built-in functions from Postgres.
license = BSD
description-file = README.rst
home-page = https://github.com/rtidatascience/
requires-python = >= 3.3
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Database


[files]
packages = postgres_power

;[global]
;test-suite = postgres_power._testrunner.runtests